# bsubio-python

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  README.md  openapi.yaml  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build.yml  publish.yml  python.yml
bsubio/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
bsubio/api/: __init__.py  jobs_api.py  output_api.py  system_api.py
bsubio/models/: __init__.py  cancel_job200_response.py  create_job201_response.py  create_job_request.py  error.py  get_types200_response.py  get_version200_response.py  job.py  list_jobs200_response.py  list_jobs200_response_data.py  processing_type.py  processing_type_example.py  processing_type_input.py  processing_type_output.py  submit_job200_response.py  upload_job_data200_response.py
docs/: CancelJob200Response.md  CreateJob201Response.md  CreateJobRequest.md  Error.md  GetTypes200Response.md  GetVersion200Response.md  Job.md  JobsApi.md  ListJobs200Response.md  ListJobs200ResponseData.md  OutputApi.md  ProcessingType.md  ProcessingTypeExample.md  ProcessingTypeInput.md  ProcessingTypeOutput.md  SubmitJob200Response.md  SystemApi.md  UploadJobData200Response.md
examples/: 01_create_job.py  02_upload_and_submit.py  03_list_jobs.py  README.md  basic.py  batch.py  comprehensive.py  requirements.txt
src/bsubio/: __init__.py  client.py  exceptions.py  models.py
test/: conftest.py  test_api_client.py  test_cancel_job200_response.py  test_create_job201_response.py  test_create_job_request.py  test_error.py  test_get_types200_response.py  test_get_version200_response.py  test_integration_live.py  test_job.py  test_jobs_api.py  test_list_jobs200_response.py  test_list_jobs200_response_data.py  test_output_api.py  test_pdf.md  test_processing_type.py  test_processing_type_example.py  test_processing_type_input.py  test_processing_type_output.py  test_submit_job200_response.py  test_system_api.py  test_upload_job_data200_response.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py
